[gd_scene load_steps=2 format=2]

[ext_resource path="res://data/main_menu/scripts/main_menu.gd" type="Script" id=1]

[node name="main_menu" type="Node2D"]
script = ExtResource( 1 )

[node name="menu_container" type="Container" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0

[node name="panel_container" type="PanelContainer" parent="menu_container"]
margin_left = 397.0
margin_top = 236.0
margin_right = 641.0
margin_bottom = 353.0

[node name="vbox_container" type="VBoxContainer" parent="menu_container/panel_container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 237.0
margin_bottom = 110.0
mouse_filter = 0

[node name="game_title" type="Label" parent="menu_container/panel_container/vbox_container"]
margin_right = 230.0
margin_bottom = 31.0
mouse_filter = 1
size_flags_vertical = 0
text = "2D Top-Down
Multiplayer Demo"
align = 1
valign = 1

[node name="join_game_button" type="Button" parent="menu_container/panel_container/vbox_container"]
margin_top = 35.0
margin_right = 230.0
margin_bottom = 55.0
text = "Join Game"

[node name="host_game_button" type="Button" parent="menu_container/panel_container/vbox_container"]
margin_top = 59.0
margin_right = 230.0
margin_bottom = 79.0
text = "Host Game"

[node name="quit_game_button" type="Button" parent="menu_container/panel_container/vbox_container"]
margin_top = 83.0
margin_right = 230.0
margin_bottom = 103.0
text = "Quit Game"

[node name="join_container" type="Container" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0

[node name="panel_container" type="PanelContainer" parent="join_container"]
margin_left = 378.0
margin_top = 236.0
margin_right = 660.0
margin_bottom = 344.0

[node name="vbox_container" type="VBoxContainer" parent="join_container/panel_container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 275.0
margin_bottom = 119.0
mouse_filter = 0

[node name="label_title" type="Label" parent="join_container/panel_container/vbox_container"]
margin_right = 268.0
margin_bottom = 14.0
mouse_filter = 1
size_flags_vertical = 0
text = "Connect to Server"
align = 1
valign = 1

[node name="hbox_container" type="HBoxContainer" parent="join_container/panel_container/vbox_container"]
margin_top = 18.0
margin_right = 268.0
margin_bottom = 42.0
mouse_filter = 0
custom_constants/separation = 30

[node name="label_nickname" type="Label" parent="join_container/panel_container/vbox_container/hbox_container"]
margin_top = 5.0
margin_right = 68.0
margin_bottom = 19.0
mouse_filter = 1
size_flags_vertical = 0
text = "Nickname:"

[node name="lineedit_nickname" type="LineEdit" parent="join_container/panel_container/vbox_container/hbox_container"]
margin_left = 98.0
margin_right = 268.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 40

[node name="hbox_container1" type="HBoxContainer" parent="join_container/panel_container/vbox_container"]
margin_top = 46.0
margin_right = 268.0
margin_bottom = 70.0
mouse_filter = 0
custom_constants/separation = 25

[node name="label_ip_address" type="Label" parent="join_container/panel_container/vbox_container/hbox_container1"]
margin_top = 5.0
margin_right = 73.0
margin_bottom = 19.0
mouse_filter = 1
size_flags_vertical = 0
text = "IP Address:"

[node name="lineedit_ip_address" type="LineEdit" parent="join_container/panel_container/vbox_container/hbox_container1"]
margin_left = 98.0
margin_right = 268.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 40
text = "127.0.0.1"

[node name="label_error" type="Label" parent="join_container/panel_container/vbox_container"]
margin_top = 74.0
margin_right = 268.0
margin_bottom = 88.0
mouse_filter = 1
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.410156, 0.410156, 1 )
align = 1
valign = 1

[node name="hbox_container2" type="HBoxContainer" parent="join_container/panel_container/vbox_container"]
margin_top = 92.0
margin_right = 268.0
margin_bottom = 112.0
mouse_filter = 0
alignment = 1

[node name="cancel_button" type="Button" parent="join_container/panel_container/vbox_container/hbox_container2"]
margin_left = 73.0
margin_right = 127.0
margin_bottom = 20.0
text = "Cancel"

[node name="connect_button" type="Button" parent="join_container/panel_container/vbox_container/hbox_container2"]
margin_left = 131.0
margin_right = 195.0
margin_bottom = 20.0
text = "Connect"

[node name="host_container" type="Container" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.0
margin_right = 1.0

[node name="panel_container" type="PanelContainer" parent="host_container"]
margin_left = 378.0
margin_top = 249.0
margin_right = 660.0
margin_bottom = 329.0

[node name="vbox_container" type="VBoxContainer" parent="host_container/panel_container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 275.0
margin_bottom = 91.0
mouse_filter = 0

[node name="container_title" type="Label" parent="host_container/panel_container/vbox_container"]
margin_right = 268.0
margin_bottom = 14.0
mouse_filter = 1
size_flags_vertical = 0
text = "Choose your Nickname"
align = 1
valign = 1

[node name="hbox_container" type="HBoxContainer" parent="host_container/panel_container/vbox_container"]
margin_top = 18.0
margin_right = 268.0
margin_bottom = 42.0
mouse_filter = 0
custom_constants/separation = 30

[node name="label_nickname" type="Label" parent="host_container/panel_container/vbox_container/hbox_container"]
margin_top = 5.0
margin_right = 68.0
margin_bottom = 19.0
mouse_filter = 1
size_flags_vertical = 0
text = "Nickname:"

[node name="lineedit_nickname" type="LineEdit" parent="host_container/panel_container/vbox_container/hbox_container"]
margin_left = 98.0
margin_right = 268.0
margin_bottom = 24.0
custom_constants/minimum_spaces = 40

[node name="label_error" type="Label" parent="host_container/panel_container/vbox_container"]
margin_top = 46.0
margin_right = 268.0
margin_bottom = 60.0
mouse_filter = 1
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 0.410156, 0.410156, 1 )
align = 1
valign = 1

[node name="hbox_container2" type="HBoxContainer" parent="host_container/panel_container/vbox_container"]
margin_top = 64.0
margin_right = 268.0
margin_bottom = 84.0
mouse_filter = 0
alignment = 1

[node name="cancel_button" type="Button" parent="host_container/panel_container/vbox_container/hbox_container2"]
margin_left = 70.0
margin_right = 124.0
margin_bottom = 20.0
text = "Cancel"

[node name="continue_button" type="Button" parent="host_container/panel_container/vbox_container/hbox_container2"]
margin_left = 128.0
margin_right = 197.0
margin_bottom = 20.0
text = "Continue"

[node name="lobby_container" type="Container" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_right = 2.0

[node name="panel_container" type="PanelContainer" parent="lobby_container"]
margin_left = 378.0
margin_top = 236.0
margin_right = 660.0
margin_bottom = 392.0

[node name="vbox_container" type="VBoxContainer" parent="lobby_container/panel_container"]
margin_left = 7.0
margin_top = 7.0
margin_right = 275.0
margin_bottom = 149.0
mouse_filter = 0

[node name="vbox_container" type="VBoxContainer" parent="lobby_container/panel_container/vbox_container"]
margin_right = 268.0
margin_bottom = 118.0
mouse_filter = 0

[node name="container_title" type="Label" parent="lobby_container/panel_container/vbox_container/vbox_container"]
margin_right = 268.0
margin_bottom = 14.0
mouse_filter = 1
size_flags_vertical = 0
text = "Waiting for Players"
align = 1
valign = 1

[node name="itemlist_players" type="ItemList" parent="lobby_container/panel_container/vbox_container/vbox_container"]
margin_top = 18.0
margin_right = 268.0
margin_bottom = 118.0
rect_min_size = Vector2( 0, 100 )

[node name="hbox_container2" type="HBoxContainer" parent="lobby_container/panel_container/vbox_container"]
margin_top = 122.0
margin_right = 268.0
margin_bottom = 142.0
mouse_filter = 0
alignment = 1

[node name="cancel_button" type="Button" parent="lobby_container/panel_container/vbox_container/hbox_container2"]
margin_left = 63.0
margin_right = 117.0
margin_bottom = 20.0
text = "Cancel"

[node name="start_game_button" type="Button" parent="lobby_container/panel_container/vbox_container/hbox_container2"]
margin_left = 121.0
margin_right = 204.0
margin_bottom = 20.0
text = "Start Game"
[connection signal="pressed" from="menu_container/panel_container/vbox_container/join_game_button" to="." method="_on_join_game_button_pressed"]
[connection signal="pressed" from="menu_container/panel_container/vbox_container/host_game_button" to="." method="_on_host_game_button_pressed"]
[connection signal="pressed" from="menu_container/panel_container/vbox_container/quit_game_button" to="." method="_on_quit_game_button_pressed"]
[connection signal="text_changed" from="join_container/panel_container/vbox_container/hbox_container/lineedit_nickname" to="." method="_on_lineedit_nickname_text_changed"]
[connection signal="pressed" from="join_container/panel_container/vbox_container/hbox_container2/cancel_button" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="join_container/panel_container/vbox_container/hbox_container2/connect_button" to="." method="_on_connect_button_pressed"]
[connection signal="text_changed" from="host_container/panel_container/vbox_container/hbox_container/lineedit_nickname" to="." method="_on_lineedit_nickname_text_changed"]
[connection signal="pressed" from="host_container/panel_container/vbox_container/hbox_container2/cancel_button" to="." method="_on_cancel_button_pressed"]
[connection signal="pressed" from="host_container/panel_container/vbox_container/hbox_container2/continue_button" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="lobby_container/panel_container/vbox_container/hbox_container2/cancel_button" to="." method="_on_cancel_lobby_button_pressed"]
[connection signal="pressed" from="lobby_container/panel_container/vbox_container/hbox_container2/start_game_button" to="." method="_on_start_game_button_pressed"]
